AirPods he Beats deng er ji yi ji qi ta pei jian deng zhe xiang ye wu ying shou tong bi zeng zhang 2 zhi

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- Modernizer JS -->
     <script src="/assets/website/js/frontend/freenetch/vendor/modernizr-2.8.3.min.js"></script>
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4L8LXCV68M"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -128,6 +127,62 @@
                 <div class="col-md-9">
                     <h2>最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                            <div class="col-md-3">
+                                <a href="/news/article-164070.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/0cdbb171f8d1d7104a29a47c2be5e046.webp" style="width:100%;" alt="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-164070.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面掌握Shadowrocket安卓版：从零开始实现安全网络代理                                    </h3>
+                                </a>
+                                <p>在当今数字化时代，网络安全与隐私保护已成为每个互联网用户的刚需。无论是突破网络限制访问全球资源，还是保护个人数据免受窥探，一款优秀的网络代理工具都显得至关重要。在众多代理工具中，Shadowrocke</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                            <div class="col-md-3">
+                                <a href="/news/article-163737.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/a07724a54716f780859ad080d68f8d0a.webp" style="width:100%;" alt="突破网络藩篱：科学上网APK网盘完全使用手册">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-163737.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破网络藩篱：科学上网APK网盘完全使用手册                                    </h3>
+                                </a>
+                                <p>引言：数字时代的自由通行证  在这个信息爆炸的时代，互联网本应是无国界的知识海洋，然而现实中我们却常常遭遇无形的数字围墙。当你想查阅某个学术资料、观看海外公开课，或是与全球同事协作时，那道"该页面无法</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                            <div class="col-md-3">
+                                <a href="/news/article-163358.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/a07724a54716f780859ad080d68f8d0a.webp" style="width:100%;" alt="突破边界：小米路由器2的科学上网全攻略与深度体验">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-163358.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破边界：小米路由器2的科学上网全攻略与深度体验                                    </h3>
+                                </a>
+                                <p>在全球化浪潮席卷的今天，互联网本应是无国界的知识海洋。然而现实中，网络监管政策却为许多用户筑起了无形的“数字高墙”。面对这一困境，越来越多的人开始寻求科学上网的解决方案。而你可能不知道，家中那台默默工</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-162979.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/a42ffa7b0d36c32c73601d4506950c06.webp" style="width:100%;" alt="免费Clash机场网址全攻略：从获取到配置的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-162979.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash机场网址全攻略：从获取到配置的完整指南                                    </h3>
+                                </a>
+                                <p>在当今高度互联的世界中，顺畅访问全球互联网已成为许多人的刚需。无论是为了学术研究、商业资讯还是娱乐消遣，突破网络限制的需求与日俱增。在众多科学上网工具中，Clash以其出色的性能和稳定性脱颖而出，成为</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-02">
                             <div class="col-md-3">
                                 <a href="/news/article-162685.htm" class="xcblog-blog-url">
@@ -151,7 +206,11 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
                         <li class="py-2"><a href="/news/article-162685.htm" title="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
                     </ul>
     </div>
 </div>
@@ -163,7 +222,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
