--- a/date/2025-10/page-2.htm
+++ b/date/2025-10/page-2.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://topclashfree.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>隐私申明 - 免费Top Clash 订阅中文网</title>
-        <meta name="keywords" content="隐私申明 - 免费Top Clash 订阅中文网" />
-        <meta name="description" content="隐私申明 - 免费Top Clash 订阅中文网" />
+    <title>2025-10归档 - 免费Top Clash 订阅中文网</title>
+        <meta name="keywords" content="2025-10归档免费Top Clash 订阅中文网" />
+        <meta name="description" content="2025-10归档，当前是第1页" />
         <link rel="icon" href="/assets/website/img/freenetch/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="免费Top Clash 订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topclashfree.github.io" />
     <meta property="og:site_name" content="免费Top Clash 订阅中文网" />
-    <meta property="og:title" content="隐私申明 - 免费Top Clash 订阅中文网" />
+    <meta property="og:title" content="2025-10归档 - 免费Top Clash 订阅中文网" />
     <meta property="og:image" content="/assets/website/img/freenetch/favicon.ico" />
-        <meta property="og:description" content="隐私申明 - 免费Top Clash 订阅中文网" />
+        <meta property="og:description" content="2025-10归档，当前是第1页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="隐私申明 - 免费Top Clash 订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-10归档 - 免费Top Clash 订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -61,7 +61,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
         <!-- Header Section Start -->
     <div class="header-section section">
         <!-- Header Bottom Start -->
@@ -101,66 +101,38 @@
             <!-- Page Banner -->
             <div class="col-12 d-flex align-items-center justify-content-center">
                 <div class="page-banner">
-                    <h1>隐私申明</h1>
+                    <h1>2025-10 归档</h1>
                     <div class="breadcrumb">
                         <ul>
                             <li><a href="/">首页</a></li>
-                            <li>隐私申明</li>
+                            <li>2025-10 归档</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div><!-- Page Banner Section End -->
-    <div class="feature-section section mt-60 mb-60">
+        <div class="feature-section section mt-60 mb-60">
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们深知用户隐私的重要性，并致力于保护用户的个人信息和隐私安全。本隐私声明旨在明确告知用户本平台如何收集、使用、存储和保护用户的个人信息。</p>
-<p>一、信息收集</p>
-<ol>
-    <li>
-        <p><strong>用户主动提供的信息</strong>：当用户在本平台注册、使用服务或参与特定活动时，可能会主动提供个人信息，如姓名、邮箱地址等。这些信息将仅用于提供服务或活动的目的，并在用户明确同意的情况下进行收集。</p>
-    </li>
-    <li>
-        <p><strong>服务使用数据</strong>：为了优化用户体验和服务质量，本平台可能会自动收集用户在使用服务过程中产生的数据，如访问记录、节点使用情况等。这些数据将用于分析服务使用情况，以便我们持续改进服务。</p>
-    </li>
-</ol>
-<p>二、信息使用</p>
-<ol>
-    <li>
-        <p><strong>提供服务</strong>：本平台将使用收集到的信息来提供用户所需的服务，包括但不限于节点订阅、服务更新通知等。</p>
-    </li>
-    <li>
-        <p><strong>数据分析</strong>：我们可能会对收集到的数据进行分析，以了解用户的使用习惯和需求，从而改进和优化服务。</p>
-    </li>
-    <li>
-        <p><strong>法律合规</strong>：在必要时，我们可能会根据法律法规的要求，向相关部门提供用户的个人信息，以配合执法或调查工作。</p>
-    </li>
-</ol>
-<p>三、信息存储与保护</p>
-<ol>
-    <li>
-        <p><strong>信息安全</strong>：本平台将采取必要的技术和管理措施，确保用户个人信息的安全。我们会对存储的数据进行加密处理，并定期进行安全检查和漏洞修复。</p>
-    </li>
-    <li>
-        <p><strong>信息存储期限</strong>：我们将根据服务需求和相关法律法规的要求，合理确定用户个人信息的存储期限。一旦超出存储期限，我们将对个人信息进行删除或匿名化处理。</p>
-    </li>
-</ol>
-<p>四、用户权利</p>
-<ol>
-    <li>
-        <p><strong>访问与更正</strong>：用户有权访问自己的个人信息，并对其进行更正。用户可以通过本平台提供的联系方式，申请查看或修改自己的个人信息。</p>
-    </li>
-    <li>
-        <p><strong>删除</strong>：在用户停止使用服务或注销账户后，我们将根据用户的请求，删除或匿名化处理其个人信息。</p>
-    </li>
-    <li>
-        <p><strong>投诉与举报</strong>：如果用户认为本平台在处理个人信息方面存在违法行为，可以通过本平台提供的联系方式进行投诉或举报。</p>
-    </li>
-</ol>
-<p>五、隐私声明的更新与修改</p>
-<p>本平台有权根据实际情况和法律法规的变化，对本隐私声明进行更新和修改。任何对隐私声明的修改都将通过本平台公告或电子邮件等方式通知用户。用户在使用服务时，应定期查看隐私声明，以了解最新的个人信息保护措施。</p>
+                    <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-162685.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/027917d12c579a5dea9bd86d027f875f.webp" style="width:100%;" alt="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-162685.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析                                    </h3>
+                                </a>
+                                <p>在信息流动日益受限的今天，网络访问的自由度成为数字时代的重要议题。无界v2rayng作为一款基于V2Ray核心的代理工具，正以其卓越的协议支持能力和用户友好的设计，成为众多用户突破网络限制的首选利器。</p>
+                            </div>
+                        </div>
+                        
+                        <ul class="pagination"><li><a href="/date/2025-10/">&laquo;</a></li> <li><a href="/date/2025-10/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -169,16 +141,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-162685.htm" title="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-165569.htm" title="掌握Surfboard配置艺术：从入门到精通的完全指南">掌握Surfboard配置艺术：从入门到精通的完全指南</a></li>
-                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
                         <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
                         <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-162685.htm" title="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-165569.htm" title="掌握Surfboard配置艺术：从入门到精通的完全指南">掌握Surfboard配置艺术：从入门到精通的完全指南</a></li>
                         <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
                     </ul>
     </div>
 </div>
